Bug 556866.  Try to cache the slot even for JOF_INCDEC ops, as long as the setter is a stub.  r=jorendorff